--- a/models/staging/jaffle_shop/stg_jaffle_shop.yml
+++ b/models/staging/jaffle_shop/stg_jaffle_shop.yml
@@ -2,20 +2,25 @@ version: 2
 
 models:
   - name: stg_customers
+    description: Staged customer data from our jaffle shop app.
     columns: 
       - name: customer_id
+        description: The primary key for customers.
         tests:
           - unique
           - not_null
 
 
   - name: stg_orders
+    description: Staged order data from our jaffle shop app.
     columns:
       - name: order_id
+        description: The primary key for orders.
         tests:
           - unique
           - not_null
       - name: status
+        description: '{{ doc("order_status") }}'
         tests:
           - accepted_values:
               values:
@@ -25,14 +30,19 @@ models:
                 - return_pending
                 - placed
       - name: customer_id
+        description: Foreign key to stg_customers.customer_id.
         tests:
           - relationships:
               to: ref('stg_customers')
               field: customer_id
-              
+
   - name: stg_payments
+    description: Staged payments data from our jaffle shop app.
     columns:
       - name: payment_id
+        description: The primary key for payments.
         tests:
           - unique
           - not_null
+      - name: payment_method
+        description: '{{ doc("ways_of_payment") }}'
